[gd_scene load_steps=6 format=2]

[ext_resource path="res://Disco 1.png" type="Texture" id=1]
[ext_resource path="res://DiscoMaster.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="CircleShape2D" id=6]

[node name="DiscoMaster" type="KinematicBody2D"]
position = Vector2( 117, 56 )
scale = Vector2( 0.6, 0.6 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Disco1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Area2DKILL" type="Area2D" parent="."]
scale = Vector2( 1.56, 1.56 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DKILL"]
shape = SubResource( 5 )

[node name="selfDestruction" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.39591, 1.40698 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2DKILL" to="." method="_on_Area2DKILL_body_entered"]
[connection signal="timeout" from="selfDestruction" to="." method="_on_selfDestruction_timeout"]
